--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -5,8 +5,6 @@
     grid-column-gap: 0.5rem;
     grid-row-gap: 0.5rem;
 
-    margin-top: 1.5rem;
-
     * {
       font-size: large;
     }
